deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pokemon-cards
  labels:
    app.kubernetes.io/name: pokemon-cards
spec:
  selector:
    app.kubernetes.io/name: pokemon-cards
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
